--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     
     <h1>Odin Recipes</h1>
-    <a href="recipes/waffles.html">Fluffy Waffles</a>
-
+   <a href="recipes/waffles.html">Waffles</a>
+    
 
 
 
