--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     
     <h1>Odin Recipes</h1>
    <a href="recipes/waffles.html">Waffles</a>
-    
-
+   <a href="recipes/pancakes.html">Pancakes</a>
+   <a href="recipes/frenchtoast.html">FrenchToast</a>
+ 
 
 
 </body>
